ARM: dts: msm: Increase GPU snapshot size for sm6150
Referrence Change Commit: (9f6005fe2635fa92c73b0a81ad7cebf95bc657d7)
Apply changes from 9f6005f to prevent issue in booting. Currently the problem is the improper lignment.
These prevent booting the device because of inalign of the snapshot size and cause an error while booting.

Signed-off-by: firemax13 <mydadisbrave2@gmail.com>
(cherry picked from commit 5b9cb2cd2cee006d40a93bef77c950ad27f2dc08)
(cherry picked from commit ffc2be4deab7cf8167caaf7e1694c7def2679d03)

--- a/arch/arm64/boot/dts/qcom/sm6150-gpu.dtsi
+++ b/arch/arm64/boot/dts/qcom/sm6150-gpu.dtsi
@@ -54,7 +54,7 @@
 		qcom,min-access-length = <32>;
 
 		/* size in bytes */
-		qcom,snapshot-size = <1048576>;
+		qcom,snapshot-size = <0x200000>;
 
 		/* base addr, size */
 		qcom,gpu-qdss-stm = <0x161c0000 0x40000>;
