ARM: dts: sdmmagpie & sm6150: Disable expedited RCU grace periods
Similar to what I've done on other devices, revert to normal grace
periods to reduce power usage. Expedited RCU hammers CPUs with IPIs to
reduce grace period durations and thus RCU latency, but that disrupts
busy CPUs and causes unnecessary wakeups while providing little to no
improvement in real-world performance.

Signed-off-by: firemax13 <mydadisbrave2@gmail.com>

--- a/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
+++ b/arch/arm64/boot/dts/qcom/sdmmagpie.dtsi
@@ -476,7 +476,7 @@
 	};
 
 	chosen {
-		bootargs = "quite noirqdebug rcupdate.rcu_expedited=1 rcu_nocbs=0-7";
+		bootargs = "quite noirqdebug rcu_nocbs=0-7";
 	};
 
 	soc: soc { };
