--- a/arch/arm64/configs/r1q_eur_open_defconfig
+++ b/arch/arm64/configs/r1q_eur_open_defconfig
@@ -629,10 +629,7 @@ CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
 # CONFIG_ARM64_SW_TTBR0_PAN is not set
 CONFIG_UH=y
-CONFIG_UH_RKP=y
-CONFIG_RKP_KDP=y
-CONFIG_RKP_NS_PROT=y
-CONFIG_RKP_DMAP_PROT=y
+# CONFIG_UH_RKP is not set
 CONFIG_UH_LKMAUTH=y
 CONFIG_UH_LKM_BLOCK=y
 
@@ -801,7 +798,7 @@ CONFIG_XFRM_STATISTICS=y
 CONFIG_XFRM_IPCOMP=y
 CONFIG_NET_KEY=y
 # CONFIG_NET_KEY_MIGRATE is not set
-CONFIG_KNOX_NCM=y
+# CONFIG_KNOX_NCM is not set
 CONFIG_INET=y
 CONFIG_IP_MULTICAST=y
 CONFIG_IP_ADVANCED_ROUTER=y
@@ -5615,11 +5612,6 @@ CONFIG_SENSORS_ET7XX=y
 # CONFIG_STEP_MOTOR_STSPIN220 is not set
 CONFIG_SS_VIBRATOR=y
 # CONFIG_BOOST_POWER_SHARE is not set
-CONFIG_FIVE_TEE_DRIVER=y
-# CONFIG_TEE_DRIVER_DEBUG is not set
-CONFIG_FIVE_EARLY_LOAD_TRUSTED_APP=y
-CONFIG_ICD=y
-CONFIG_ICD_USE_QSEECOM=y
 
 #
 # Pdic samsung features
@@ -6165,22 +6157,15 @@ CONFIG_INTEGRITY_TRUSTED_KEYRING=y
 CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
-CONFIG_FIVE=y
-# CONFIG_FIVE_DEBUG is not set
-CONFIG_FIVE_CERT_USER="x509_five_user.der"
-CONFIG_FIVE_DEFAULT_HASH_SHA1=y
-# CONFIG_FIVE_DEFAULT_HASH_SHA256 is not set
-# CONFIG_FIVE_DEFAULT_HASH_SHA512 is not set
-CONFIG_FIVE_DEFAULT_HASH="sha1"
-CONFIG_FIVE_TRUSTED_KEYRING=y
-CONFIG_SECURITY_DEFEX=y
-CONFIG_DEFEX_KERNEL_ONLY=y
-CONFIG_PROCA=y
+# CONFIG_FIVE is not set
+# CONFIG_SECURITY_DEFEX is not set
+# CONFIG_DEFEX_KERNEL_ONLY is not set
+# CONFIG_PROCA is not set
 # CONFIG_GAF_V3 is not set
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
 CONFIG_GAF_V6=y
-CONFIG_SECURITY_DSMS=y
+# CONFIG_SECURITY_DSMS is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
 # CONFIG_DEFAULT_SECURITY_SMACK is not set
 # CONFIG_DEFAULT_SECURITY_DAC is not set
