--- a/arch/arm64/configs/fire_defconfig
+++ b/arch/arm64/configs/fire_defconfig
@@ -233,7 +233,7 @@ CONFIG_PERF_EVENTS=y
 # CONFIG_PERF_USER_SHARE is not set
 # CONFIG_DEBUG_PERF_USE_VMALLOC is not set
 CONFIG_VM_EVENT_COUNTERS=y
-CONFIG_SLUB_DEBUG=y
+# CONFIG_SLUB_DEBUG is not set
 # CONFIG_SLUB_MEMCG_SYSFS_ON is not set
 # CONFIG_COMPAT_BRK is not set
 # CONFIG_SLAB is not set
@@ -320,7 +320,7 @@ CONFIG_STRICT_MODULE_RWX=y
 # CONFIG_GCOV_KERNEL is not set
 CONFIG_ARCH_HAS_GCOV_PROFILE_ALL=y
 CONFIG_HAVE_GENERIC_DMA_COHERENT=y
-CONFIG_SLABINFO=y
+# CONFIG_SLABINFO is not set
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
 # CONFIG_MODULES is not set
@@ -530,11 +530,11 @@ CONFIG_HOLES_IN_ZONE=y
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 CONFIG_PREEMPT_COUNT=y
-CONFIG_HZ_100=y
+# CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
-# CONFIG_HZ_300 is not set
+CONFIG_HZ_300=y
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=100
+CONFIG_HZ=300
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -1005,7 +1005,7 @@ CONFIG_NETFILTER_XT_MATCH_POLICY=y
 CONFIG_NETFILTER_XT_MATCH_PKTTYPE=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA=y
 CONFIG_NETFILTER_XT_MATCH_QUOTA2=y
-CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG=y
+# CONFIG_NETFILTER_XT_MATCH_QUOTA2_LOG is not set
 # CONFIG_NETFILTER_XT_MATCH_RATEEST is not set
 # CONFIG_NETFILTER_XT_MATCH_REALM is not set
 # CONFIG_NETFILTER_XT_MATCH_RECENT is not set
@@ -1469,7 +1469,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_QCOM_COINCELL is not set
 # CONFIG_APDS9802ALS is not set
 # CONFIG_ISL29003 is not set
-CONFIG_KNOX_KAP=y
+# CONFIG_KNOX_KAP is not set
 # CONFIG_ISL29020 is not set
 # CONFIG_SENSORS_TSL2550 is not set
 # CONFIG_SENSORS_BH1770 is not set
@@ -1482,7 +1482,7 @@ CONFIG_KNOX_KAP=y
 # CONFIG_SRAM is not set
 CONFIG_HDCP_QSEECOM=y
 CONFIG_QSEECOM=y
-CONFIG_QSEECOM_DEBUG=y
+# CONFIG_QSEECOM_DEBUG is not set
 # CONFIG_PCI_ENDPOINT_TEST is not set
 CONFIG_UID_SYS_STATS=y
 # CONFIG_UID_SYS_STATS_DEBUG is not set
@@ -3098,7 +3098,7 @@ CONFIG_SPECTRA_CAMERA=y
 CONFIG_MSM_VIDC_V4L2=y
 CONFIG_MSM_VIDC_GOVERNORS=y
 CONFIG_MSM_SDE_ROTATOR=y
-CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG=y
+# CONFIG_MSM_SDE_ROTATOR_EVTLOG_DEBUG is not set
 # CONFIG_MSM_NPU is not set
 
 #
@@ -3296,7 +3296,7 @@ CONFIG_DRM_MSM_DSI_STAGING=y
 # CONFIG_DRM_MSM_HDCP is not set
 CONFIG_DRM_SDE_WB=y
 # CONFIG_DRM_SDE_SHD is not set
-CONFIG_DRM_SDE_EVTLOG_DEBUG=y
+# CONFIG_DRM_SDE_EVTLOG_DEBUG is not set
 CONFIG_DRM_SDE_RSC=y
 # CONFIG_DRM_MSM_LEASE is not set
 CONFIG_DRM_PANEL=y
@@ -4779,9 +4779,9 @@ CONFIG_ARM_SMMU=y
 # CONFIG_IOMMU_TLBSYNC_DEBUG is not set
 # CONFIG_ARM_SMMU_TESTBUS_DUMP is not set
 CONFIG_QCOM_LAZY_MAPPING=y
-CONFIG_IOMMU_DEBUG=y
-CONFIG_IOMMU_DEBUG_TRACKING=y
-CONFIG_IOMMU_TESTS=y
+# CONFIG_IOMMU_DEBUG is not set
+# CONFIG_IOMMU_DEBUG_TRACKING is not set
+# CONFIG_IOMMU_TESTS is not set
 # CONFIG_QCOM_IOMMU is not set
 
 #
@@ -5914,7 +5914,7 @@ CONFIG_SCHEDSTATS=y
 # CONFIG_DEBUG_LOCKING_API_SELFTESTS is not set
 # CONFIG_LOCK_TORTURE_TEST is not set
 # CONFIG_WW_MUTEX_SELFTEST is not set
-CONFIG_STACKTRACE=y
+# CONFIG_STACKTRACE is not set
 # CONFIG_WARN_ALL_UNSEEDED_RANDOM is not set
 # CONFIG_DEBUG_KOBJECT is not set
 CONFIG_HAVE_DEBUG_BUGVERBOSE=y
@@ -6070,7 +6070,7 @@ CONFIG_SECURITY_SELINUX=y
 CONFIG_SECURITY_SELINUX_DEVELOP=y
 CONFIG_SECURITY_SELINUX_AVC_STATS=y
 CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=0
-CONFIG_SECURITY_SMACK=y
+# CONFIG_SECURITY_SMACK is not set
 # CONFIG_SECURITY_SMACK_BRINGUP is not set
 # CONFIG_SECURITY_SMACK_NETFILTER is not set
 # CONFIG_SECURITY_SMACK_APPEND_SIGNALS is not set
